--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "next": "12.1.0",
     "qs": "^6.10.3",
     "react": "17.0.2",
