--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.4.2",
     "formik": "^2.2.9",
     "moment": "^2.29.1",
     "next": "12.1.0",
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-geocode": "^0.2.3",
     "react-icons": "^4.3.1",
+    "react-map-gl": "^7.0.10",
     "react-toastify": "^8.2.0",
     "yup": "^0.32.11"
   },
